--- a/ff.yaml
+++ b/ff.yaml
@@ -1,22 +1,11 @@
-new-admin-access:
+experimentation-flag:
   variations:
-    default_var: false
-    false_var: false
-    true_var: true
+    A_var: A
+    B_var: B
   defaultRule:
     percentage:
-      false_var: 70
-      true_var: 30
-
-flag-only-for-admin:
-  variations:
-    default_var: false
-    false_var: false
-    true_var: true
-  targeting:
-    - query: admin eq true
-      percentage:
-        false_var: 0
-        true_var: 100
-  defaultRule:
-    variation: default_var
+      A_var: 50
+      B_var: 50
+  experimentation:
+    start: 2021-03-20T00:00:00.10-05:00
+    end: 2021-03-21T00:00:00.10-05:00
