--- a/ff.yaml
+++ b/ff.yaml
@@ -1,11 +1,14 @@
-experimentation-flag:
+progressive-flag:
   variations:
-    A_var: A
-    B_var: B
+    A_var: true
+    B_var: false
   defaultRule:
-    percentage:
-      A_var: 50
-      B_var: 50
-  experimentation:
-    start: 2024-06-12T00:00:00.10-05:00
-    end: 2021-06-20T00:00:00.10-05:00
+    progressiveRollout:
+      initial:
+        variation: A_var
+        percentage: 0
+        date: 2021-03-20T00:00:00.10-05:00
+      end:
+        variation: B_var
+        percentage: 100
+        date: 2021-03-21T00:00:00.10-05:00
